# goparse

./: .gitignore  Cargo.toml  README.md
input/: config.go  consts.go  func.go  synthetic.go
src/: ast.rs  lexer.rs  main.rs  syntax.rs  types.rs
src/ast/: expr.rs  literals.rs  mod.rs
src/rules/: expr.rs  literals.rs  mod.rs
src/syntax/: expr.rs  helpers.rs  mod.rs
src/tests/: idents.rs  integration.rs  lexer.rs  literals.rs  mod.rs  ops.rs  syntax.rs
