[package]
edition = "2018"
name = "goparse"
version = "0.1.0"
authors = ["Nikita Vilunov <nikitaoryol@gmail.com>", "Ivan Lyagaev <ilsocialacc@gmail.com"]

[dependencies]
regex = "^1.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"

[dependencies.nom]
version = "^5.0"
features = ['regexp']
